--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,8 +35,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text="@string/battery_level"
-                android:textSize="16sp" />
+                android:text=""
+                android:textSize="0sp"
+                android:visibility="gone" />
 
             <TextClock
                 android:id="@+id/clock"
@@ -77,6 +78,13 @@
                 android:layout_gravity="center"
                 android:textSize="32sp"
                 android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/calendar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                tools:text="Calendar Events"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
