--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,9 +35,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text=""
+                android:text="d"
                 android:textSize="0sp"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:alpha="0"/>
 
             <TextClock
                 android:id="@+id/clock"
@@ -84,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                tools:text="Calendar Events"/>
+                tools:text="Calendar Events" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
